--- a/app.json
+++ b/app.json
@@ -17,10 +17,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.emilychu.myNewProject"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "android": {
+      "package": "com.emilychu.myNewProject"
+    },
+    "entryPoint": "node_modules/expo/AppEntry.js"
   }
 }
